objects/Channel__c.object
<CustomObject>
    <fields>
        <fullName>Apex__c</fullName>
        <formula>"new Channel__c (Name='" &amp;  Name  &amp; "', ChannelName__c='" &amp;  ChannelName__c  &amp; "',TierField__c='" &amp;   TierField__c   &amp; "', ZoneField__c='" &amp;   ZoneField__c   &amp; "',RotationField__c='" &amp;   RotationField__c   &amp; "',FocusFirmField__c='" &amp;   FocusFirmField__c   &amp; "')"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apex</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelName__c</fullName>
        <externalId>true</externalId>
        <label>MARS Channel Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DefaultProfileId__c</fullName>
        <externalId>true</externalId>
        <label>Default Profile Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FocusFirmField__c</fullName>
        <label>Focus Firm Field</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RotationField__c</fullName>
        <label>Rotation Field</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TierField__c</fullName>
        <label>Tier Field</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoneField__c</fullName>
        <label>Zone Field</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Channel</label>
    <nameField>
        <label>Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Apex__c</columns>
        <columns>ChannelName__c</columns>
        <columns>RotationField__c</columns>
        <columns>TierField__c</columns>
        <columns>ZoneField__c</columns>
        <columns>FocusFirmField__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Channels</label>
    </listViews>
    <listViews>
        <fullName>New</fullName>
        <columns>NAME</columns>
        <columns>Apex__c</columns>
        <columns>ChannelName__c</columns>
        <columns>RotationField__c</columns>
        <columns>TierField__c</columns>
        <columns>ZoneField__c</columns>
        <columns>FocusFirmField__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2016 12:00 AM</value>
        </filters>
        <label>New Channels</label>
    </listViews>
</CustomObject>